# ocr-data-collector

./: .gitignore  README.md  hello.py  ocr.py  pyproject.toml  tixcraft.py
